<resources>
    <string name="af_app_name">住房公积金管理中心</string>
    <string name="app_name">移动公积金</string>
    <string name="af_logo_2_person">王同义</string>
    <string name="af_logo_2_person1">正常</string>
    <string name="af_logo_2_person2">21365.77元</string>
    <string name="af_logo_2_person3">63.00元</string>
    <string name="af_logo_2_person4">2015年01月</string>
    <string name="af_logo_2_person5">125726521205</string>
    <string name="af_logo_2_person6">2011年08月16日</string>
    <string name="af_logo_3_listview_item_name">汇缴2015年01月公积金</string>
    <string name="af_logo_3_listview_item_money">¥630.00</string>
    <string name="af_logo_3_listview_item_time">2015年01月20日</string>
    <string name="af_logo_41_1">2009041619010001</string>
    <string name="af_logo_41_2">55100460139248</string>
    <string name="af_logo_41_3">陈全明</string>
    <string name="af_logo_41_4">410526197709251173</string>
    <string name="af_logo_41_5">段保丽</string>
    <string name="af_logo_41_6">410526197709251173</string>
    <string name="af_logo_41_7">355100460139248</string>
    <string name="af_logo_41_8">12年</string>
    <string name="af_logo_41_9">93000元</string>
    <string name="af_logo_41_10">2009/5/13 0:00:00</string>
    <string name="af_logo_41_11">546.21元</string>
    <string name="af_logo_41_12">4.25%</string>
    <string name="af_logo_41_13">17949.95元</string>
    <string name="af_logo_41_14">36338.47元</string>
    <string name="af_logo_41_15">正常</string>
    <string name="af_logo_41_16">56661.53</string>
    <string name="af_logo_41_17">68</string>
    <string name="af_logo_41_18">0</string>
    <string name="af_logo_41_19">滑县家行</string>
    <string name="af_logo_41_20">置业担保</string>
    <string name="af_logo_41_21">等额本息</string>
    <string name="af_logo_51_1">2014.12.16</string>
    <string name="af_logo_51_2">1365.77元</string>
    <string name="af_logo_51_3">630.00元</string>
    <string name="af_logo_51_4">282365.77元</string>
    <string name="af_logo_51_5">1865.77元</string>
    <string name="af_logo_51_6">265.77元</string>
    <string name="af_logo_51_7">1600.00元</string>
    <string name="af_logo_51_8">21365.77元</string>
    <string name="af_logo_51_9">21365.77元</string>
    <string name="af_logo_51_10">0.00元</string>
    <string name="af_logo_61_1">2015年01月20日</string>
    <string name="af_logo_62_2">6</string>
    <string name="af_logo_63_3">416.40</string>
    <string name="af_logo_64_4">19.80</string>
    <string name="af_logo_611_5">0.00</string>
    <string name="af_logo_622_6">446.20</string>
    <string name="af_logo_633_7">56371.68</string>
    <string name="af_app_back">返回</string>
    <string name="action_settings">设置</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="af_logo_1">新闻信息</string>
    <string name="af_logo_2">个人信息</string>
    <string name="af_logo_2_title">基本账户</string>
    <string name="af_logo_2_endDate">本数据截止日期2015年01月20日</string>
    <string name="af_logo_2_state">账户状态：</string>
    <string name="af_logo_2_remain">账户余额：</string>
    <string name="af_logo_2_monthpay">月缴存额：</string>
    <string name="af_logo_2_lastmonthpay">末次缴存年：</string>
    <string name="af_logo_2_account">公积金账号：</string>
    <string name="af_logo_2_startDate">开户日期：</string>
    <string name="af_logo_2_department">所属单位：</string>
    <string name="af_logo_2_name">郑州彩通科技股份有限公司</string>
    <string name="af_logo_3">账户明细</string>
    <string name="af_logo_3_title">基本明细</string>
    <string name="af_logo_4">贷款信息</string>
    <string name="af_logo_4_1">贷款合同编号：</string>
    <string name="af_logo_4_2">还款账号：</string>
    <string name="af_logo_4_3">借款人姓名：</string>
    <string name="af_logo_4_4">身份证号：</string>
    <string name="af_logo_4_5">配偶姓名：</string>
    <string name="af_logo_4_6">配偶身份证：</string>
    <string name="af_logo_4_7">储蓄还款账户：</string>
    <string name="af_logo_4_8">贷款年限：</string>
    <string name="af_logo_4_9">贷款金额：</string>
    <string name="af_logo_4_10">放款日期：</string>
    <string name="af_logo_4_11">月还款额：</string>
    <string name="af_logo_4_12">贷款年利率：</string>
    <string name="af_logo_4_13">已还利息：</string>
    <string name="af_logo_4_14">贷款余额：</string>
    <string name="af_logo_4_15">还款状态：</string>
    <string name="af_logo_4_16">已还本金：</string>
    <string name="af_logo_4_17">已还期数：</string>
    <string name="af_logo_4_18">当前逾期期数：</string>
    <string name="af_logo_4_19">受托银行：</string>
    <string name="af_logo_4_20">担保方式：</string>
    <string name="af_logo_4_21">还款方式：</string>
    <string name="af_logo_5">还款信息</string>
    <string name="af_logo_5_1">还款日期：</string>
    <string name="af_logo_5_2">扣银行卡金额：</string>
    <string name="af_logo_5_3">扣公积金账户金额：</string>
    <string name="af_logo_5_4">贷款余额：</string>
    <string name="af_logo_5_5">应还金额合计：</string>
    <string name="af_logo_5_6">本次还本金：</string>
    <string name="af_logo_5_7">本次还利息：</string>
    <string name="af_logo_5_8">已还金额合计：</string>
    <string name="af_logo_5_9">欠本息合计：</string>
    <string name="af_logo_5_10">欠滞纳金:</string>
    <string name="af_logo_6">还款明细</string>
    <string name="af_logo_61">还款日期</string>
    <string name="af_logo_62">还款期数</string>
    <string name="af_logo_63">偿还本金</string>
    <string name="af_logo_64">偿还利息</string>
    <string name="af_logo_611">应还滞纳金</string>
    <string name="af_logo_622">本息合计</string>
    <string name="af_logo_633">贷款余额</string>
    <string name="af_logo_7">办事指南</string>
    <string name="af_logo_7_GuideTo7">业务办理公告</string>
    <string name="af_logo_7_GuideTo">业务办理</string>
    <string name="af_logo_8">业务网点</string>
    <string name="af_logo_81">郑州公积金中心</string>
    <string name="af_logo_82">中原路百花路11号3楼</string>
    <string name="af_logo_83">当前人数：</string>
    <string name="af_logo_9">还款计算</string>
    <string name="af_logo_9_detail">还款计算结果</string>
    <string name="af_logo_9_1">等額本息</string>
    <string name="af_logo_9_2">等額本金</string>
    <string name="af_logo_9_3">公积金贷款</string>
    <string name="af_logo_9_323">公积金贷款:</string>
    <string name="af_logo_9_4">商业贷款</string>
    <string name="af_logo_9_44">商业性贷款:</string>
    <string name="af_logo_9_444">贷款总额减去公积金贷款</string>
    <string name="af_logo_9_5">组合贷款</string>
    <string name="af_logo_9_6">利率：</string>
    <string name="af_logo_9_7">基准利率</string>
    <string name="af_logo_9_8">公积金：3.750% 商业：5.600%</string>
    <string name="af_logo_9_9">房屋总价：</string>
    <string name="af_logo_9_10">贷款比例(%)：</string>
    <string name="af_logo_9_11">贷款年数：</string>
    <string name="af_logo_9_12">单位（万）</string>
    <string name="af_logo_9_13">1&#8722;100</string>
    <string name="af_logo_9_14">1&#8722;30</string>
    <string name="af_logo_9_close">关闭</string>
    <string name="tv_logo9d_1">房屋总价：</string>
    <string name="ed_logo9d_1">500000.0</string>
    <string name="tv_logo9d_2">首付款：</string>
    <string name="ed_logo9d_2">150000.0</string>
    <string name="tv_logo9d_3">贷款总额：</string>
    <string name="ed_logo9d_3">350000.0</string>
    <string name="tv_logo9d_4">公积金贷款利率：</string>
    <string name="ed_logo9d_4">4.250%</string>
    <string name="tv_logo9d_5">商业贷款利率：</string>
    <string name="ed_logo9d_5">0</string>
    <string name="tv_logo9d_6">还款总额：</string>
    <string name="ed_logo9d_6">568825.0</string>
    <string name="tv_logo9d_7">支付利息款：</string>
    <string name="ed_logo9d_7">218825.0</string>
    <string name="tv_logo9d_8">贷款月数：</string>
    <string name="ed_logo9d_8">300</string>
    <string name="tv_logo9d_9">月均还款：</string>
    <string name="ed_logo9d_9">1896.1</string>
    <string name="tv_logo9d_10">首月还款：</string>
    <string name="ed_logo9d_10">2406.2</string>
    <string name="tv_logo9d_11">末月还款：</string>
    <string name="ed_logo9d_11">1170.8</string>
    <string name="tv_logo9d_12">还款明细：</string>
    <string name="btn_logo9d_12">点击查看</string>
    <string name="af_logo_10">缴存计算</string>
    <string name="af_logo_10_title_right">工资说明</string>
    <string name="af_logo_10_dialog_title">【工资收入说明】</string>
    <string name="af_logo_10_dialog_content">\t\t1、个人工资总额是指下列情况的月平均工资：
\n\t\t(1),规范津补贴后的各级行政单位（含参公事业单位）按照工改后的职务工资和级别工资以及规定的津、补贴、年终一次性奖金合并计算。
\n\t\t(2),实行绩效工资的各级事业单位按照工改后的岗位工资、薪级工资和年终一次性奖金合并计算。
\n\t\t(3),未实行绩效工资的各级事业单位按工改后的岗位工资和薪级工资以及规定的津、补贴、年终一次性奖金合并计算。
\n\t\t(4),企业工资包括：基础工资、工龄工资、效益工资、计时工资、计件工资、岗位津贴和补贴、各种奖金和加班工资。
\n\t\t2、输入个人工资总额，个人缴存比例、单位缴存比例后点击‘计算’按钮，显示月缴存额计算结果。</string>
    <string name="af_logo_10_calculate">计算</string>
    <string name="af_logo_10_1">工资收入：</string>
    <string name="af_logo_10_2">个人缴存比例（%）：</string>
    <string name="af_logo_10_3">单位缴存比例（%）：</string>
    <string name="af_logo_10_4">月缴存额：</string>
    <string name="af_logo_10_5">补充公积金月缴额：</string>
    <string name="af_logo_10_11">输入工资</string>
    <string name="af_logo_10_22">为5&#8722;20数字</string>
    <string name="af_logo_10_33">为5&#8722;20数字</string>
    <string name="af_logo_10_44">0</string>
    <string name="af_logo_10_55">0</string>
    <string name="af_logo_11">贷款试算</string>
    <string name="af_logo_11_man">男</string>
    <string name="af_logo_11_female">女</string>
    <string name="af_logo_11_unit">单位（元）</string>
    <string name="af_logo_11_1">主贷人公积金余额：</string>
    <string name="af_logo_11_2">主贷人补充公积金余额：</string>
    <string name="af_logo_11_3">主贷人月缴交额：</string>
    <string name="af_logo_11_4">主贷人年龄：</string>
    <string name="af_logo_11_5">主贷人性别：</string>
    <string name="af_logo_11_6">参贷人公积金余额：</string>
    <string name="af_logo_11_7">参贷人补充公积金余额：</string>
    <string name="af_logo_11_8">参贷人月缴交额：</string>
    <string name="af_logo_11_9">房屋价格：</string>
    <string name="af_logo_11_10">房屋类型：</string>
    <string name="af_logo_11_r">贷款额度计算结果</string>
    <string name="af_logo_11_r1">公积金可贷款额度：</string>
    <string name="af_logo_11_r2">补充公积金可贷款额度：</string>
    <string name="af_logo_11_r3">总贷款额度：</string>
    <string name="af_logo_11_r4">可贷款年限范围：</string>
    <string name="af_logo_11_r5">300000.0元</string>
    <string name="af_logo_11_r6">0.0元</string>
    <string name="af_logo_11_r7">300000.0元</string>
    <string name="af_logo_11_r8">12&#8722;30元</string>
    <string name="af_logo_12">密码修改</string>
    <string name="af_logo_12_the_original_password">原密码:</string>
    <string name="af_logo_12_the_original_password_hint">请输入原密码</string>
    <string name="af_logo_12_the_new_password">新密码:</string>
    <string name="af_logo_12_the_new_password_hint">长度为6&#8722;15位</string>
    <string name="af_logo_12_the_confirm_password">确认密码:</string>
    <string name="af_logo_12_the_confirm_password_hint">请重复输入密码</string>
    <string name="af_logo_12_finish">提交</string>
    <string name="af_aboutus">关于我们</string>
    <string name="af_aboutus_privacystatement">隐私声明</string>
    <string name="af_aboutus_privacystatement_content1">隐私声明</string>
    <string name="af_aboutus_privacystatement_content2">\n\t\t关于住房公积金个人住房贷款担保收费有
        关事项的通知 \n\t\t根据住房和城乡建设部、财政部、中国人民银行《关于发展住房公积金个人住房贷款业务的
        通知》（建金〔2014〕148号）的有关要求，郑州住房公积金个人住房贷款（不含单位集资房贷款、个人自建房贷
        款）从2015年1月1日起，不再向借款人收取担保费用。 \n\n</string>
    <string name="af_aboutus_privacystatement_content3">郑州住房公积金管理中心</string>
    <string name="af_aboutus_privacystatement_content33">2014年12月16日</string>
    <string name="af_aboutus_onlinemessage">在线留言</string>
    <string name="af_aboutus_onlinemessage_name">姓名：</string>
    <string name="af_aboutus_onlinemessage_email">邮箱：</string>
    <string name="af_aboutus_onlinemessage_tel">手机号码：</string>
    <string name="af_aboutus_onlinemessage_msg">留言：</string>
    <string name="af_confirm">确认</string>
    <string name="af_cancel">取消</string>
    <string name="af_map_markername">郑州公积金中心</string>
    <string name="af_map_markercontent">中原路百花路11号3楼</string>
    <string name="af_map_markernum">1</string>
</resources>