<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white4"
    android:orientation="vertical" >

    <include layout="@layout/af_main_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="15dp" >

                <TextView
                    style="@style/TextViewStyle_aboutus"
                    android:layout_gravity="center_vertical"
                    android:text="@string/af_logo_12_the_original_password" />

                <EditText
                    android:id="@+id/ed_original_pwd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="33dp"
                    android:layout_weight="1"
                    android:background="@drawable/pwd_background"
                    android:hint="@string/af_logo_12_the_original_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:padding="5dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/black4"
                android:contentDescription="@string/action_settings" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="15dp" >

                <TextView
                    style="@style/TextViewStyle_aboutus"
                    android:layout_gravity="center_vertical"
                    android:text="@string/af_logo_12_the_new_password" />

                <EditText
                    android:id="@+id/ed_new_pwd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="33dp"
                    android:layout_weight="1"
                    android:background="@drawable/pwd_background"
                    android:hint="@string/af_logo_12_the_new_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:padding="5dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/black4"
                android:contentDescription="@string/action_settings" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="15dp" >

                <TextView
                    style="@style/TextViewStyle_aboutus"
                    android:layout_gravity="center_vertical"
                    android:text="@string/af_logo_12_the_confirm_password" />

                <EditText
                    android:id="@+id/ed_confirm_pwd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/pwd_background"
                    android:hint="@string/af_logo_12_the_confirm_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:padding="5dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_disenable"
        android:padding="15dp"
        android:text="@string/af_logo_12_finish"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>