<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white4"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tv_logo4"
            style="@style/TextViewStyle_aboutus"
            android:layout_width="110dp"
            android:layout_gravity="center_vertical"
            android:text="@string/af_logo_4_1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ed_logo4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/pwd_background"
            android:enabled="false"
            android:hint="@string/af_logo_41_1"
            android:padding="5dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/black4"
        android:contentDescription="@string/action_settings" />

</LinearLayout>