<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@color/white" >

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/TextViewStyle_aboutus"
            android:layout_centerVertical="true"
            android:text="@string/af_logo_3_listview_item_name" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_item_money"
            style="@style/TextViewStyle_aboutus"
            android:layout_gravity="right"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/af_logo_3_listview_item_money"
            android:textColor="@color/red"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_item_time"
            style="@style/TextViewStyle_aboutus"
            android:layout_weight="1"
            android:text="@string/af_logo_3_listview_item_time"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>