<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/af_dialog_background"
        android:orientation="vertical" >

        <TextView
            style="@style/TextViewStyle_aboutus"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/af_logo_10_dialog_title"
            android:textColor="@color/white4"
            android:textSize="14sp" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/af_dialog_background"
            android:fillViewport="true"
            android:scrollbars="none" >

            <TextView
                android:id="@+id/txt_dailog_message"
                style="@style/TextViewStyle_aboutus"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/af_logo_10_dialog_content"
                android:textColor="@color/white4"
                android:textSize="14sp" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_cancelclick"
            android:contentDescription="@string/action_settings"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/af_cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_able"
            android:contentDescription="@string/action_settings"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/af_confirm"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>